--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,17 @@
-=
+button {
+  background-color: blueviolet;
+  border: 10px;
+  border-radius: 4px;
+  color: white;
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 0.75rem 5rem;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+input {
+  font-size: 1.25rem;
+}
