--- a/assets/style.css
+++ b/assets/style.css
@@ -173,3 +173,28 @@ hr {
     color: #333;
     width: 100%;
 }
+
+#resume {
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#agent-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px auto;
+    padding: 0 15px;
+
+}
+
+#resume-solution {
+    display: flex;
+    flex-direction: column;
+}
